fix bug with type annotation